# ruvion-client

./: .gitmodules  DEBUG_STEPS.md  README.md  run.sh
ruvion-client/: .gitignore  pyproject.toml  requirements.txt
ruvion-client/examples/: config.example.py  diagnose.py  friction_comp.py  goto_zero.py  gravity_comp.py  monitor.py  monitor_simple.py  move_test.py  streaming_test.py  zeroing_joint7.py
ruvion-client/ruvion_client/: __init__.py  control.py  discovery.py  events.py  motion.py  telemetry.py  transport.py
ruvion-client/ruvion_client/proto/: __init__.py
ruvion-client/ruvion_client/proto/ruvion/motion/: ActivityEvent.py  ActivityType.py  ApplyUpdate.py  ArmCommand.py  ArmTelemetry.py  Calibration.py  CalibrationType.py  CheckUpdate.py  ClaimControl.py  ClearFault.py  CommandResult.py  CommandType.py  ControllerEvent.py  DriveMode.py  DriveModeEvent.py  DriveStatus.py  DriveStatusEvent.py  Event.py  EventActivityType.py  EventDriveMode.py  EventDriveStatus.py  EventMotionStatus.py  EventType.py  HumanoidCommand.py  HumanoidSetSpeedOverride.py  HumanoidTelemetry.py  HumanoidZeroing.py  Impedance.py  JointImpedance.py  JointPoseCommand.py  JointTwistCommand.py  MotionCommand.py  MotionStatus.py  MotionStatusEvent.py  Quickstop.py  QuickstopState.py  Reboot.py  ReleaseControl.py  RobotCommandType.py  RobotTelemetryType.py  (+13 more)
ruvion-client/scripts/: generate_proto.sh
