[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ruvion-client"
version = "0.1.0"
description = "Python client for Ruvion robot controllers (QUIC + mTLS)"
requires-python = ">=3.10"
dependencies = [
    "aioquic>=1.3.0",
    "zeroconf>=0.132.0",
    "numpy>=1.24.0",
    "flatbuffers>=23.5.26",
]

[tool.setuptools.packages.find]
include = ["ruvion_client*"]
